widget: Modify selection boundaries to match xterm's behavior

https://bugzilla.gnome.org/show_bug.cgi?id=725909